Bug 263286 - Notifications for networkmanager plasmoid deos not work
Summary: Notifications for networkmanager plasmoid deos not work
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: KDED Module (other bugs)
Version First Reported In: 0.9
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Olivier Goffart
URL:
Keywords:
: 267285 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-16 02:36 UTC by naraesk
Modified: 2011-03-04 02:13 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description naraesk 2011-01-16 02:36:06 UTC
Version:           unspecified (using KDE 4.5.5) 
OS:                Linux

Hello,

i tried to set some notifications for the networkmanager plasmoid

Reproducible: Didn't try

Steps to Reproduce:
So I went to systemsettings → notifications. source: networkmanagement. Now there are 15 different options (lost connection, new connection, …). For ALL of them i choose some notifications (write to log file, play sound, execute script),. Then I did these actions (connect to the internet, disable wlan and so on).

Actual Results:  
Nothing happens.

Expected Results:  
I expect some notifications, written logs and played files and executed programs.

Besides this issue, notifications seems to work correct.
Comment 1 naraesk 2011-01-16 02:37:12 UTC
Sorry, i forgot: always reproducible.
Comment 2 Kai Uwe Broulik 2011-01-17 13:24:00 UTC
Confirmed in 4.6 RC 2
Comment 3 Lamarque V. Souza 2011-02-12 17:57:47 UTC
Changing the product because it is Plasma NM that does not call the notifications. The systemsettings config was created for the old knetworkmanager and have not been ported to Plasma NM yet.
Comment 4 Lamarque V. Souza 2011-02-27 20:25:13 UTC
Git commit 46291afaaa933bc28f3842cc3a0ec4a37cb0a509 by Lamarque V. Souza.
Committed on 27/02/2011 at 20:21.
Pushed by lvsouza into branch 'master'.

Enable notifications.

BUG: 263286

M  +8    -0    kded/service.cpp     

http://commits.kde.org/networkmanagement/46291afaaa933bc28f3842cc3a0ec4a37cb0a509
Comment 5 Lamarque V. Souza 2011-02-28 03:47:43 UTC
Git commit 5544b4181145301423338c5b54bb5fa2b54174a3 by Lamarque V. Souza.
Committed on 28/02/2011 at 03:38.
Pushed by lvsouza into branch 'master'.

Removing notifications Event::UserConnectionAttempt and
Event::AutomaticConnectionAttempt. They have never been implemented and
they do not make much sense since we also have a Event::Connecting
notification.

CCBUG: 263286

M  +2    -4    libs/service/events.cpp     
M  +0    -2    libs/service/events.h     
M  +1    -10   libs/service/notificationmanager.cpp     
M  +0    -1    libs/service/notificationmanager.h     
M  +0    -117  networkmanagement.notifyrc     

http://commits.kde.org/networkmanagement/5544b4181145301423338c5b54bb5fa2b54174a3
Comment 6 Lamarque V. Souza 2011-02-28 04:19:58 UTC
Git commit 0ce4ec19aadc5663878bd674ef666ad4a4a954cd by Lamarque V. Souza.
Committed on 28/02/2011 at 04:16.
Pushed by lvsouza into branch 'master'.

Implementing Event::ConnectFailed notification.

CCBUG: 263286

M  +7    -1    libs/internals/interfaceconnection.cpp     
M  +2    -0    libs/internals/interfaceconnection.h     
M  +1    -1    libs/service/events.cpp     
M  +4    -1    libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/0ce4ec19aadc5663878bd674ef666ad4a4a954cd
Comment 7 Lamarque V. Souza 2011-02-28 04:52:54 UTC
Git commit 9dccbccf051081de672a5b76e4ea2638c4a06133 by Lamarque V. Souza.
Committed on 28/02/2011 at 04:49.
Pushed by lvsouza into branch 'master'.

Implementing Event::LowSignal notification.

CCBUG: 263286

M  +1    -1    libs/service/events.cpp     
M  +29   -7    libs/service/notificationmanager.cpp     
M  +1    -0    libs/service/notificationmanager.h     

http://commits.kde.org/networkmanagement/9dccbccf051081de672a5b76e4ea2638c4a06133
Comment 8 Lamarque V. Souza 2011-02-28 05:00:07 UTC
*** Bug 267285 has been marked as a duplicate of this bug. ***
Comment 9 Lamarque V. Souza 2011-02-28 20:23:42 UTC
Git commit f6d1463ee4cab597847aeff8861c50c79fa30eae by Lamarque V. Souza.
Committed on 28/02/2011 at 20:16.
Pushed by lvsouza into branch 'master'.

Moving this to outside the if (!d->suppressHardwareEvents) {...} to make
the signals networkAppeared and networkDisappeared be connected in the
NotificationManager constructor.
This fix the problem where Event::NetworkAppeared and
Event::NetworkDisappeared do not work.

CCBUG: 263286

M  +12   -12   libs/service/notificationmanager.cpp     

http://commits.kde.org/networkmanagement/f6d1463ee4cab597847aeff8861c50c79fa30eae
Comment 10 naraesk 2011-03-04 01:49:48 UTC
Thanks for taking care of this issue. Will it already be active in the 4.6.1 release?

Best regards.
Comment 11 Lamarque V. Souza 2011-03-04 02:13:13 UTC
Yes and no. Plasma NM does not follow KDE SC release schedule. You need to compile it:

git clone git://anongit.kde.org/networkmanagement
cd networkmanagement
make
make install

or wait until your distribution provides the compiled package for you.