Enable notifications.

BUG: 263286